--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,9 +5,10 @@
             "package": "apex-rollup",
             "path": "rollup",
             "versionNumber": "1.2.25.0",
-            "versionDescription": "Adding merge functionality for parent records, record-triggered flow bugfixes",
+            "versionDescription": "Correcting issues with recursion detection & merging of parent-level records support",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
-        }
+        },
+        {"path": "extra-tests"}
     ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
