--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -32,6 +32,7 @@
         "apex-rollup@1.2.21-0": "04t6g000008nt6kAAA",
         "apex-rollup@1.2.22-0": "04t6g000008SgCUAA0",
         "apex-rollup@1.2.23-0": "04t6g000008SgDcAAK",
-        "apex-rollup@1.2.24-0": "04t6g000008SgEQAA0"
+        "apex-rollup@1.2.24-0": "04t6g000008SgEQAA0",
+        "apex-rollup@1.2.25-0": "04t6g000008SgGCAA0"
     }
 }
