--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.24.0",
-            "versionDescription": "Fixed issue with String-based COUNT rollups, more separation of concerns work",
+            "versionNumber": "1.2.25.0",
+            "versionDescription": "Correcting issues with recursion detection & merging of parent-level records support",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
         }
     ],
@@ -32,6 +32,7 @@
         "apex-rollup@1.2.21-0": "04t6g000008nt6kAAA",
         "apex-rollup@1.2.22-0": "04t6g000008SgCUAA0",
         "apex-rollup@1.2.23-0": "04t6g000008SgDcAAK",
-        "apex-rollup@1.2.24-0": "04t6g000008SgEQAA0"
+        "apex-rollup@1.2.24-0": "04t6g000008SgEQAA0",
+        "apex-rollup@1.2.25-0": "04t6g000008SgGCAA0"
     }
 }
