--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.26.0",
-            "versionDescription": "Prevent downstream rollups from running on merge full recalculations",
+            "versionNumber": "1.2.27.0",
+            "versionDescription": "Fix COUNT issue for UPSERT/UPDATE",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
         }
     ],
