--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.27.0",
-            "versionDescription": "Fix COUNT issue for UPSERT/UPDATE",
+            "versionNumber": "1.2.28.0",
+            "versionDescription": "Fix namespacing issue",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
         }
     ],
@@ -35,6 +35,7 @@
         "apex-rollup@1.2.24-0": "04t6g000008SgEQAA0",
         "apex-rollup@1.2.25-0": "04t6g000008SgGCAA0",
         "apex-rollup@1.2.26-0": "04t6g000008SgI8AAK",
-        "apex-rollup@1.2.27-0": "04t6g000008SgImAAK"
+        "apex-rollup@1.2.27-0": "04t6g000008SgImAAK",
+        "apex-rollup@1.2.28-0": "04t6g000008SgIwAAK"
     }
 }
