--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -38,6 +38,6 @@
         "apex-rollup@1.2.27-0": "04t6g000008SgImAAK",
         "apex-rollup@1.2.28-0": "04t6g000008SgIwAAK",
         "apex-rollup@1.2.29-0": "04t6g000008SgLWAA0",
-        "apex-rollup@1.2.30-0": "04t6g000008SgSnAAK"
+        "apex-rollup@1.2.30-0": "04t6g000008SgSsAAK"
     }
 }
