--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "test": "npm run test:apex && npm run test:lwc",
     "test:apex": "sh ./scripts/runLocalTests.sh",
-    "test:lwc": "sfdx-lwc-jest",
+    "test:lwc": "sfdx-lwc-jest --coverage --skipApiVersionCheck",
     "prettier": "prettier"
   }
 }
