--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -39,6 +39,6 @@
         "apex-rollup@1.2.28-0": "04t6g000008SgIwAAK",
         "apex-rollup@1.2.29-0": "04t6g000008SgLWAA0",
         "apex-rollup@1.2.30-0": "04t6g000008SgSsAAK",
-        "apex-rollup@1.2.31-0": "04t6g000008SgUZAA0"
+        "apex-rollup@1.2.31-0": "04t6g000008SgUyAAK"
     }
 }
