--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,7 +5,7 @@
             "package": "apex-rollup",
             "path": "rollup",
             "versionNumber": "1.2.31.0",
-            "versionDescription": "Beginning of Rollup Logger extension work, CONCAT bugfix",
+            "versionDescription": "Beginning of Rollup Logger extension work, CONCAT bugfix, many invocable improvements, full batch recalculator bugfix",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
         }
     ],
@@ -39,6 +39,6 @@
         "apex-rollup@1.2.28-0": "04t6g000008SgIwAAK",
         "apex-rollup@1.2.29-0": "04t6g000008SgLWAA0",
         "apex-rollup@1.2.30-0": "04t6g000008SgSsAAK",
-        "apex-rollup@1.2.31-0": "04t6g000008SgVIAA0"
+        "apex-rollup@1.2.31-0": "04t6g000008Sga4AAC"
     }
 }
