--- a/codecov.yml
+++ b/codecov.yml
@@ -4,27 +4,12 @@ coverage:
             default:
                 target: 90 # otherwise any regression in code coverage fails the build
                 threshold: 2%
-                range: 75...100
-                round: down
-                precision: 2
-                if_ci_failed: success
-            apex:
-                target: 90 # otherwise any regression in code coverage fails the build
-                threshold: 2%
-                range: 75...100
-                round: down
-                precision: 2
+                # range: 75...100
+                # round: down
+                # precision: 2
                 if_ci_failed: success
                 flags:
-                  - Apex
-            lwc:
-                target: 90 # otherwise any regression in code coverage fails the build
-                threshold: 2%
-                range: 75...100
-                round: down
-                precision: 2
-                if_ci_failed: success
-                flags:
-                  - LWC
+                    - Apex
+                    - LWC
         patch: off
 github_checks: false
