--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.3.5.0",
-            "versionDescription": "Internal bookkeeping updates, fixes for combined Rollup loggers, bugfixes for Rollup Evaluator",
+            "versionNumber": "1.3.6.0",
+            "versionDescription": "Fixed a pass by reference issue in RollupFlowBulkProcessor reported by Ryan Gramer",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
@@ -78,19 +78,16 @@
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.1-0": "04t6g000008ShTJAA0",
-        "apex-rollup@1.2.37-0": "04t6g000008SguzAAC",
-        "apex-rollup@1.2.38-0": "04t6g000008SgyXAAS",
-        "apex-rollup@1.2.39-0": "04t6g000008ShAVAA0",
         "apex-rollup@1.2.40-0": "04t6g000008ShFvAAK",
         "apex-rollup@1.2.41-0": "04t6g000008ShJEAA0",
         "apex-rollup@1.2.42-0": "04t6g000008ShMNAA0",
         "apex-rollup@1.2.43-0": "04t6g000008ShPMAA0",
-        "apex-rollup@1.2.44-0-beta-package-only": "04t6g000008ShSaAAK",
         "apex-rollup@1.3.0-0": "04t6g000008ShUCAA0",
         "apex-rollup@1.3.1-0": "04t6g000008ShZ8AAK",
         "apex-rollup@1.3.2-0": "04t6g000008ShapAAC",
         "apex-rollup@1.3.3-0": "04t6g000008ShbnAAC",
         "apex-rollup@1.3.4-0": "04t6g000008ShgeAAC",
-        "apex-rollup@1.3.5-0": "04t6g000008ShhXAAS"
+        "apex-rollup@1.3.5-0": "04t6g000008ShhXAAS",
+        "apex-rollup@1.3.6-0": "04t6g000008Shn7AAC"
     }
 }
