--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.3.6.0",
-            "versionDescription": "Fixed a pass by reference issue in RollupFlowBulkProcessor reported by Ryan Gramer",
+            "versionNumber": "1.3.7.0",
+            "versionDescription": "Adds parent-level filtering via Calc Item Where Clause support to Apex Rollup, fixed full recalc issue reported by jcart, fixed a Grandparent rollup bug reported by Ryan Gramer",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
@@ -19,8 +19,8 @@
                     "package": "apex-rollup@1.3.0-0"
                 }
             ],
-            "versionNumber": "0.0.7.0",
-            "versionDescription": "Updating All List View to include sensible fields for viewing logs",
+            "versionNumber": "0.0.8.0",
+            "versionDescription": "Upgrading to Winter22",
             "default": false,
             "unpackagedMetadata": {
                 "path": "plugins/CustomObjectRollupLogger/tests"
@@ -37,8 +37,8 @@
                     "package": "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements"
                 }
             ],
-            "versionNumber": "0.0.3.0",
-            "versionDescription": "Deprecated RollupLoggerPlugin__mdt in favor of RollupPlugin__mdt",
+            "versionNumber": "0.0.4.0",
+            "versionDescription": "Upgrading to Winter22",
             "default": false,
             "unpackagedMetadata": {
                 "path": "plugins/NebulaLogger/tests"
@@ -52,8 +52,8 @@
                     "package": "apex-rollup@1.3.0-0"
                 }
             ],
-            "versionNumber": "0.0.1.0",
-            "versionDescription": "Introducing callback mechanism to interact with updated Rollup records",
+            "versionNumber": "0.0.2.0",
+            "versionDescription": "Upgrading to Winter22",
             "default": false,
             "unpackagedMetadata": {
                 "path": "plugins/RollupCallback/tests"
@@ -66,18 +66,19 @@
     ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "52.0",
+    "sourceApiVersion": "53.0",
     "packageAliases": {
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
-        "Apex Rollup - Custom Logger@0.0.6-0": "04t6g000008ShT9AAK",
         "Apex Rollup - Custom Logger@0.0.7-0": "04t6g000008Shh3AAC",
+        "Apex Rollup - Custom Logger@0.0.8-0": "04t6g000008ShzjAAC",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
-        "Apex Rollup - Nebula Logger@0.0.2-0": "04t6g000008Sh8yAAC",
         "Apex Rollup - Nebula Logger@0.0.3-0": "04t6g000008ShTEAA0",
+        "Apex Rollup - Nebula Logger@0.0.4-0": "04t6g000008ShzoAAC",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.1-0": "04t6g000008ShTJAA0",
+        "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
         "apex-rollup@1.2.40-0": "04t6g000008ShFvAAK",
         "apex-rollup@1.2.41-0": "04t6g000008ShJEAA0",
         "apex-rollup@1.2.42-0": "04t6g000008ShMNAA0",
@@ -88,6 +89,7 @@
         "apex-rollup@1.3.3-0": "04t6g000008ShbnAAC",
         "apex-rollup@1.3.4-0": "04t6g000008ShgeAAC",
         "apex-rollup@1.3.5-0": "04t6g000008ShhXAAS",
-        "apex-rollup@1.3.6-0": "04t6g000008Shn7AAC"
+        "apex-rollup@1.3.6-0": "04t6g000008Shn7AAC",
+        "apex-rollup@1.3.7-0": "04t6g000008Si03AAC"
     }
 }
