--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.3.7.0",
-            "versionDescription": "Adds parent-level filtering via Calc Item Where Clause support to Apex Rollup, fixed full recalc issue reported by jcart, fixed a Grandparent rollup bug reported by Ryan Gramer",
+            "versionNumber": "1.3.8.0",
+            "versionDescription": "Fix Schedulable rollup classes, rollup loggers now respect Is Rollup Logging Enabled, fix some broken query formatting",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
@@ -16,11 +16,11 @@
             "path": "plugins/CustomObjectRollupLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.3.0-0"
+                    "package": "apex-rollup@1.3.8-0"
                 }
             ],
-            "versionNumber": "0.0.8.0",
-            "versionDescription": "Upgrading to Winter22",
+            "versionNumber": "0.0.9.0",
+            "versionDescription": "Only log when Is Rollup Logging is enabled",
             "default": false,
             "unpackagedMetadata": {
                 "path": "plugins/CustomObjectRollupLogger/tests"
@@ -31,14 +31,14 @@
             "path": "plugins/NebulaLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.3.0-0"
+                    "package": "apex-rollup@1.3.8-0"
                 },
                 {
                     "package": "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements"
                 }
             ],
-            "versionNumber": "0.0.4.0",
-            "versionDescription": "Upgrading to Winter22",
+            "versionNumber": "0.0.5.0",
+            "versionDescription": "Only log when Is Rollup Logging is enabled",
             "default": false,
             "unpackagedMetadata": {
                 "path": "plugins/NebulaLogger/tests"
@@ -70,19 +70,15 @@
     "packageAliases": {
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
-        "Apex Rollup - Custom Logger@0.0.7-0": "04t6g000008Shh3AAC",
         "Apex Rollup - Custom Logger@0.0.8-0": "04t6g000008ShzjAAC",
+        "Apex Rollup - Custom Logger@0.0.9-0": "04t6g000008Si1GAAS",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
-        "Apex Rollup - Nebula Logger@0.0.3-0": "04t6g000008ShTEAA0",
         "Apex Rollup - Nebula Logger@0.0.4-0": "04t6g000008ShzoAAC",
+        "Apex Rollup - Nebula Logger@0.0.5-0": "04t6g000008Si1BAAS",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.1-0": "04t6g000008ShTJAA0",
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
-        "apex-rollup@1.2.40-0": "04t6g000008ShFvAAK",
-        "apex-rollup@1.2.41-0": "04t6g000008ShJEAA0",
-        "apex-rollup@1.2.42-0": "04t6g000008ShMNAA0",
-        "apex-rollup@1.2.43-0": "04t6g000008ShPMAA0",
         "apex-rollup@1.3.0-0": "04t6g000008ShUCAA0",
         "apex-rollup@1.3.1-0": "04t6g000008ShZ8AAK",
         "apex-rollup@1.3.2-0": "04t6g000008ShapAAC",
@@ -90,6 +86,7 @@
         "apex-rollup@1.3.4-0": "04t6g000008ShgeAAC",
         "apex-rollup@1.3.5-0": "04t6g000008ShhXAAS",
         "apex-rollup@1.3.6-0": "04t6g000008Shn7AAC",
-        "apex-rollup@1.3.7-0": "04t6g000008Si03AAC"
+        "apex-rollup@1.3.7-0": "04t6g000008Si03AAC",
+        "apex-rollup@1.3.8-0": "04t6g000008Si24AAC"
     }
 }
