--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -88,6 +88,6 @@
         "apex-rollup@1.3.6-0": "04t6g000008Shn7AAC",
         "apex-rollup@1.3.7-0": "04t6g000008Si03AAC",
         "apex-rollup@1.3.8-0": "04t6g000008Si24AAC",
-        "apex-rollup@1.3.9-0": "04t6g000008Si2EAAS"
+        "apex-rollup@1.3.9-0": "04t6g000008Si5XAAS"
     }
 }
