--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.3.9.0",
+            "versionNumber": "1.3.10.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -79,15 +79,11 @@
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.1-0": "04t6g000008ShTJAA0",
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
-        "apex-rollup@1.3.0-0": "04t6g000008ShUCAA0",
-        "apex-rollup@1.3.1-0": "04t6g000008ShZ8AAK",
-        "apex-rollup@1.3.2-0": "04t6g000008ShapAAC",
-        "apex-rollup@1.3.3-0": "04t6g000008ShbnAAC",
-        "apex-rollup@1.3.4-0": "04t6g000008ShgeAAC",
         "apex-rollup@1.3.5-0": "04t6g000008ShhXAAS",
         "apex-rollup@1.3.6-0": "04t6g000008Shn7AAC",
         "apex-rollup@1.3.7-0": "04t6g000008Si03AAC",
         "apex-rollup@1.3.8-0": "04t6g000008Si24AAC",
-        "apex-rollup@1.3.9-0": "04t6g000008Si5XAAS"
+        "apex-rollup@1.3.9-0": "04t6g000008Si5XAAS",
+        "apex-rollup@1.3.10-0": "04t6g000008SiG7AAK"
     }
 }
