--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -84,6 +84,7 @@
         "apex-rollup@1.3.7-0": "04t6g000008Si03AAC",
         "apex-rollup@1.3.8-0": "04t6g000008Si24AAC",
         "apex-rollup@1.3.9-0": "04t6g000008Si5XAAS",
-        "apex-rollup@1.3.10-0": "04t6g000008SiG7AAK"
+        "apex-rollup@1.3.10-0": "04t6g000008SiG7AAK",
+        "apex-rollup@1.3.11-0": "04t6g000008SiHAAA0"
     }
 }
