--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -85,6 +85,6 @@
         "apex-rollup@1.3.8-0": "04t6g000008Si24AAC",
         "apex-rollup@1.3.9-0": "04t6g000008Si5XAAS",
         "apex-rollup@1.3.10-0": "04t6g000008SiG7AAK",
-        "apex-rollup@1.3.11-0": "04t6g000008SiHAAA0"
+        "apex-rollup@1.3.11-0": "04t6g000008SiHeAAK"
     }
 }
