--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -86,6 +86,6 @@
         "apex-rollup@1.3.9-0": "04t6g000008Si5XAAS",
         "apex-rollup@1.3.10-0": "04t6g000008SiG7AAK",
         "apex-rollup@1.3.11-0": "04t6g000008SiHjAAK",
-        "apex-rollup@1.3.12-0": "04t6g000008SiKsAAK"
+        "apex-rollup@1.3.12-0": "04t6g000008SiLRAA0"
     }
 }
