--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.3.15.0",
+            "versionName": "Fixing CONCAT_DISTINCT + SplitConcatDelimiter__c bug",
+            "versionNumber": "1.3.16.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -89,6 +90,7 @@
         "apex-rollup@1.3.12-0": "04t6g000008SiLRAA0",
         "apex-rollup@1.3.13-0": "04t6g000008SiM0AAK",
         "apex-rollup@1.3.14-0": "04t6g000008SiQIAA0",
-        "apex-rollup@1.3.15-0": "04t6g000008SiRGAA0"
+        "apex-rollup@1.3.15-0": "04t6g000008SiRGAA0",
+        "apex-rollup@1.3.16-0": "04t6g000008SiSdAAK"
     }
 }
