--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixing CONCAT_DISTINCT + SplitConcatDelimiter__c bug",
-            "versionNumber": "1.3.16.0",
+            "versionName": "Adding more formula tests, created Code Coverage plugin",
+            "versionNumber": "1.3.17.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -14,7 +14,7 @@
         },
         {
             "package": "Apex Rollup - Custom Logger",
-            "path": "plugins/CustomObjectRollupLogger",
+            "path": "plugins\\CustomObjectRollupLogger",
             "dependencies": [
                 {
                     "package": "apex-rollup@1.3.8-0"
@@ -29,7 +29,7 @@
         },
         {
             "package": "Apex Rollup - Nebula Logger",
-            "path": "plugins/NebulaLogger",
+            "path": "plugins\\NebulaLogger",
             "dependencies": [
                 {
                     "package": "apex-rollup@1.3.8-0"
@@ -47,7 +47,7 @@
         },
         {
             "package": "Apex Rollup - Rollup Callback",
-            "path": "plugins/RollupCallback",
+            "path": "plugins\\RollupCallback",
             "dependencies": [
                 {
                     "package": "apex-rollup@1.3.0-0"
@@ -63,6 +63,18 @@
         {
             "path": "extra-tests",
             "default": false
+        },
+        {
+            "path": "plugins\\ExtraCodeCoverage",
+            "package": "Apex Rollup - Extra Code Coverage",
+            "versionName": "Updating code coverage",
+            "versionNumber": "0.0.1.0",
+            "default": false,
+            "dependencies": [
+                {
+                    "package": "apex-rollup@1.3.15-0"
+                }
+            ]
         }
     ],
     "namespace": "",
@@ -80,6 +92,7 @@
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.1-0": "04t6g000008ShTJAA0",
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
+        "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
         "apex-rollup@1.3.5-0": "04t6g000008ShhXAAS",
         "apex-rollup@1.3.6-0": "04t6g000008Shn7AAC",
         "apex-rollup@1.3.7-0": "04t6g000008Si03AAC",
@@ -91,6 +104,7 @@
         "apex-rollup@1.3.13-0": "04t6g000008SiM0AAK",
         "apex-rollup@1.3.14-0": "04t6g000008SiQIAA0",
         "apex-rollup@1.3.15-0": "04t6g000008SiRGAA0",
-        "apex-rollup@1.3.16-0": "04t6g000008SiSdAAK"
+        "apex-rollup@1.3.16-0": "04t6g000008SiSdAAK",
+        "Apex Rollup - Extra Code Coverage@0.0.1-0": "04t6g000008SiTHAA0"
     }
 }
