Updating deploy.yml to use npm ci

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: 'Install NPM'
         if: steps.cache-npm.outputs.cache-hit != 'true'
-        run: npm install
+        run: npm ci
 
       - name: 'Run LWC Unit Tests'
         run: npm run test:lwc
